src/main/java/analyzer/CodexParser.java
// Generated from C:/Users/Hp/IntelliJProjects/CodexLatinus/src/main/java/Codex.g4 by ANTLR 4.13.2
package analyzer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CodexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMERUS=1, TEXTUM=2, DECIMALIS=3, LITTERA=4, BOOL=5, VERUM=6, FALSUS=7, 
		ESTO=8, SERIES=9, STRUCTURA=10, FINIS=11, FINIS_MAIOR=12, SI=13, ALITER=14, 
		DUM=15, FACERE=16, PER=17, PERGE=18, INTERRUMPE=19, ACTIO=20, RATIO=21, 
		REDDERE=22, VARIABILES=23, MUNERA=24, MAIOR=25, NON=26, LEER=27, IMPRIMIR=28, 
		MAS_MAS=29, MENOS_MENOS=30, MAS=31, MENOS=32, POR=33, DIV=34, IGUAL_IGUAL=35, 
		DIFERENTE=36, MAYOR_IGUAL=37, MENOR_IGUAL=38, MAYOR=39, MENOR=40, AND=41, 
		OR=42, ASIGNACION=43, DOS_PUNTOS=44, PUNTO_COMA=45, COMA=46, PUNTO=47, 
		PAREN_IZQ=48, PAREN_DER=49, LLAVE_IZQ=50, LLAVE_DER=51, CORCHETE_IZQ=52, 
		CORCHETE_DER=53, ID=54, ENTERO=55, DECIMAL=56, CADENA=57, CARACTER=58, 
		COMMENT=59, BLOCK_COMMENT=60, WS=61;
	public static final int
		RULE_program = 0, RULE_seccionVariables = 1, RULE_seccionFunciones = 2, 
		RULE_seccionPrincipal = 3, RULE_tipoDato = 4, RULE_declaracion = 5, RULE_declaracionVar = 6, 
		RULE_declaracionArreglo = 7, RULE_definicionStruct = 8, RULE_funcion = 9, 
		RULE_seccionVariablesLocal = 10, RULE_parametros = 11, RULE_parametro = 12, 
		RULE_instruccion = 13, RULE_interrupcion = 14, RULE_asignacion = 15, RULE_estructuraControl = 16, 
		RULE_condicionalSi = 17, RULE_cicloDum = 18, RULE_cicloFacere = 19, RULE_cicloPer = 20, 
		RULE_funcionEspecial = 21, RULE_expresion = 22, RULE_llamadaFuncion = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "seccionVariables", "seccionFunciones", "seccionPrincipal", 
			"tipoDato", "declaracion", "declaracionVar", "declaracionArreglo", "definicionStruct", 
			"funcion", "seccionVariablesLocal", "parametros", "parametro", "instruccion", 
			"interrupcion", "asignacion", "estructuraControl", "condicionalSi", "cicloDum", 
			"cicloFacere", "cicloPer", "funcionEspecial", "expresion", "llamadaFuncion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'numerus'", "'textum'", "'decimalis'", "'littera'", "'bool'", 
			"'verum'", "'falsus'", "'esto'", "'series'", "'structura'", "'finis'", 
			"'FINIS'", "'si'", "'aliter'", "'dum'", "'facere'", "'per'", "'perge'", 
			"'interrumpe'", "'actio'", "'ratio'", "'reddere'", "'VARIABILES'", "'MUNERA'", 
			"'MAIOR'", "'non'", "'<<'", "'>>'", "'++'", "'--'", "'+'", "'-'", "'*'", 
			"'/'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'&&'", "'||'", 
			"'='", "':'", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMERUS", "TEXTUM", "DECIMALIS", "LITTERA", "BOOL", "VERUM", "FALSUS", 
			"ESTO", "SERIES", "STRUCTURA", "FINIS", "FINIS_MAIOR", "SI", "ALITER", 
			"DUM", "FACERE", "PER", "PERGE", "INTERRUMPE", "ACTIO", "RATIO", "REDDERE", 
			"VARIABILES", "MUNERA", "MAIOR", "NON", "LEER", "IMPRIMIR", "MAS_MAS", 
			"MENOS_MENOS", "MAS", "MENOS", "POR", "DIV", "IGUAL_IGUAL", "DIFERENTE", 
			"MAYOR_IGUAL", "MENOR_IGUAL", "MAYOR", "MENOR", "AND", "OR", "ASIGNACION", 
			"DOS_PUNTOS", "PUNTO_COMA", "COMA", "PUNTO", "PAREN_IZQ", "PAREN_DER", 
			"LLAVE_IZQ", "LLAVE_DER", "CORCHETE_IZQ", "CORCHETE_DER", "ID", "ENTERO", 
			"DECIMAL", "CADENA", "CARACTER", "COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Codex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public SeccionPrincipalContext seccionPrincipal() {
			return getRuleContext(SeccionPrincipalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CodexParser.EOF, 0); }
		public SeccionVariablesContext seccionVariables() {
			return getRuleContext(SeccionVariablesContext.class,0);
		}
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(48);
				seccionVariables();
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUNERA) {
				{
				setState(51);
				seccionFunciones();
				}
			}

			setState(54);
			seccionPrincipal();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionVariablesContext extends ParserRuleContext {
		public TerminalNode VARIABILES() { return getToken(CodexParser.VARIABILES, 0); }
		public TerminalNode MAYOR() { return getToken(CodexParser.MAYOR, 0); }
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public SeccionVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionVariables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterSeccionVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitSeccionVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitSeccionVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionVariablesContext seccionVariables() throws RecognitionException {
		SeccionVariablesContext _localctx = new SeccionVariablesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionVariables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(VARIABILES);
			setState(58);
			match(MAYOR);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) {
				{
				{
				setState(59);
				declaracion();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode MUNERA() { return getToken(CodexParser.MUNERA, 0); }
		public TerminalNode MAYOR() { return getToken(CodexParser.MAYOR, 0); }
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitSeccionFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitSeccionFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(MUNERA);
			setState(66);
			match(MAYOR);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ACTIO || _la==RATIO) {
				{
				{
				setState(67);
				funcion();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionPrincipalContext extends ParserRuleContext {
		public TerminalNode MAIOR() { return getToken(CodexParser.MAIOR, 0); }
		public TerminalNode MAYOR() { return getToken(CodexParser.MAYOR, 0); }
		public TerminalNode FINIS_MAIOR() { return getToken(CodexParser.FINIS_MAIOR, 0); }
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public TerminalNode PUNTO_COMA() { return getToken(CodexParser.PUNTO_COMA, 0); }
		public SeccionPrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionPrincipal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterSeccionPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitSeccionPrincipal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitSeccionPrincipal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionPrincipalContext seccionPrincipal() throws RecognitionException {
		SeccionPrincipalContext _localctx = new SeccionPrincipalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seccionPrincipal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(MAIOR);
			setState(74);
			match(MAYOR);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18014398913159424L) != 0)) {
				{
				{
				setState(75);
				instruccion();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(FINIS_MAIOR);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTO_COMA) {
				{
				setState(82);
				match(PUNTO_COMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoDatoContext extends ParserRuleContext {
		public TerminalNode NUMERUS() { return getToken(CodexParser.NUMERUS, 0); }
		public TerminalNode TEXTUM() { return getToken(CodexParser.TEXTUM, 0); }
		public TerminalNode DECIMALIS() { return getToken(CodexParser.DECIMALIS, 0); }
		public TerminalNode LITTERA() { return getToken(CodexParser.LITTERA, 0); }
		public TerminalNode BOOL() { return getToken(CodexParser.BOOL, 0); }
		public TerminalNode ID() { return getToken(CodexParser.ID, 0); }
		public TipoDatoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoDato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterTipoDato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitTipoDato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitTipoDato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoDatoContext tipoDato() throws RecognitionException {
		TipoDatoContext _localctx = new TipoDatoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipoDato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 18014398509482046L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionVarContext declaracionVar() {
			return getRuleContext(DeclaracionVarContext.class,0);
		}
		public DeclaracionArregloContext declaracionArreglo() {
			return getRuleContext(DeclaracionArregloContext.class,0);
		}
		public DefinicionStructContext definicionStruct() {
			return getRuleContext(DefinicionStructContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				declaracionVar();
				}
				break;
			case SERIES:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				declaracionArreglo();
				}
				break;
			case STRUCTURA:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				definicionStruct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVarContext extends ParserRuleContext {
		public TerminalNode ESTO() { return getToken(CodexParser.ESTO, 0); }
		public TerminalNode ID() { return getToken(CodexParser.ID, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(CodexParser.DOS_PUNTOS, 0); }
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(CodexParser.PUNTO_COMA, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclaracionVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterDeclaracionVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitDeclaracionVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitDeclaracionVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionVarContext declaracionVar() throws RecognitionException {
		DeclaracionVarContext _localctx = new DeclaracionVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracionVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ESTO);
			setState(93);
			match(ID);
			setState(94);
			match(DOS_PUNTOS);
			setState(95);
			tipoDato();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 559853733039571136L) != 0)) {
				{
				setState(96);
				expresion(0);
				}
			}

			setState(99);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionArregloContext extends ParserRuleContext {
		public TerminalNode SERIES() { return getToken(CodexParser.SERIES, 0); }
		public TerminalNode ID() { return getToken(CodexParser.ID, 0); }
		public TerminalNode CORCHETE_IZQ() { return getToken(CodexParser.CORCHETE_IZQ, 0); }
		public TerminalNode ENTERO() { return getToken(CodexParser.ENTERO, 0); }
		public TerminalNode CORCHETE_DER() { return getToken(CodexParser.CORCHETE_DER, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(CodexParser.DOS_PUNTOS, 0); }
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(CodexParser.PUNTO_COMA, 0); }
		public TerminalNode LLAVE_IZQ() { return getToken(CodexParser.LLAVE_IZQ, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode LLAVE_DER() { return getToken(CodexParser.LLAVE_DER, 0); }
		public List<TerminalNode> COMA() { return getTokens(CodexParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(CodexParser.COMA, i);
		}
		public DeclaracionArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionArreglo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).enterDeclaracionArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexListener ) ((CodexListener)listener).exitDeclaracionArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexVisitor ) return ((CodexVisitor<? extends T>)visitor).visitDeclaracionArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionArregloContext declaracionArreglo() throws RecognitionException {
		DeclaracionArregloContext _localctx = new DeclaracionArregloContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracionArreglo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(SERIES);
			setState(102);
			match(ID);
			setState(103);
			match(CORCHETE_IZQ);
			setState(104);
			match(ENTERO);
			setState(105);
			match(CORCHETE_DER);
			setState(106);
			match(DOS_PUNTOS);
			setState(107);
			tipoDato();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LLAVE_IZQ) {
				{
				setState(108);
				match(LLAVE_IZQ);
				setState(109);
				expresion(0);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(110);
					match(COMA);
					setState(111);
					expresion(0);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(LLAVE_DER);
				}
			}

			setState(121);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionStructContext extends ParserRuleContext {
		public TerminalNode STRUCTURA() { return getToken(CodexParser.STRUCTURA, 0); }
		public List<TerminalNode> ID() { return getTokens(CodexParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CodexParser.ID, i);
		}
		public TerminalNode LLAVE_IZQ() { return getToken(CodexParser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(CodexParser.LLAVE_DER, 0); }
		public TerminalNode FINIS() { return getToken(CodexParser.FINIS, 0); }
		public List<TerminalNode> PUNTO_COMA() { return getTokens(CodexParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(CodexParser.PUNTO_COMA, i);
		}
		public List<TerminalNode> ESTO() { return getTokens(CodexParser.ESTO); }
